Fixed 'seats at least' label width
By default the width is 35%, which cut off the text on the iphone 5

--- a/scout/static/hybridize/css/android.scss
+++ b/scout/static/hybridize/css/android.scss
@@ -95,7 +95,7 @@ body { font-family: 'Roboto', sans-serif; }
 .item-input { text-align: right;
     input, select { text-align: right }
 
-    select { display: inline-block; margin-right: 0; width: auto; height: auto }
+    select { display: inline-block; margin-right: 0; width: auto;}
 }
 // helpers
 
